# thunder_vault

./: main.py  pyproject.toml
database/: db.py
routes/: auth_route.py
services/: services.py
src/: server.py
static/css/: login.css  signup.css  styles.css  view_directory_styles.css
static/js/: directory.js  login.js  main.js  signup.js
templates/: index.html  login.html  signup.html  view_files.html
